--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    height: 100%;
+    /*height: 100%;*/
     background-color: #FBFBFB;
 }
 
@@ -8,11 +8,9 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
-}
-
-header>p {
-    margin-top: 80px;
+    width: 100%;
+    height: 100vh;
+    /*position: relative;*/
 }
 
 main {
@@ -87,7 +85,8 @@ button:hover {
 
 .hero-image {
     background-image: url("/assets/hero-front.jpg");
-    height: 600px;
+    height: 85%;
+    width: 100%;
 
     background-position: center;
     background-repeat: no-repeat;
@@ -95,12 +94,13 @@ button:hover {
     position: relative;
 
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-start;
 }
 
 .hero-text {
     margin-left: 40px;
+    margin-bottom: 40px;
 
     /*text-align: center;
     position: absolute;
