--- a/_includes/css/navigation.css
+++ b/_includes/css/navigation.css
@@ -2,7 +2,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    height: 15%;
+    width: 100%;
+    position: relative;
 }
 
 nav a:hover {
