--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -10,6 +10,8 @@ header {
     align-items: center;
     width: 100%;
     height: 100vh;
+    margin-top: 120px;
+    z-index: 0;
     /*position: relative;*/
 }
 
