--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 	{% include html/head.html %}
 
 	<style>
+		{% include css/reset.css %}
 		{% include css/navigation.css %}
 		{% include css/main.css %}
 		{% include css/form.css %}
