--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 	<style>
 		{% include css/reset.css %}
-		{% include css/navigation.css %}
+		{% include css/header.css %}
 		{% include css/main.css %}
 		{% include css/form.css %}
 		{% include css/footer.css %}
