--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,18 +1,6 @@
 body {
-    margin: 0;
-    /*height: 100%;*/
-    background-color: #FBFBFB;
-}
 
-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    margin-top: 120px;
-    z-index: 0;
-    /*position: relative;*/
+    background-color: #FBFBFB;
 }
 
 main {
@@ -21,13 +9,6 @@ main {
     align-items: center;
 }
 
-main>* {
-    margin-top: 80px;
-    /*max-width: 940px;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 h2 {
     font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
@@ -91,76 +72,29 @@ button:hover {
     background: 0 0 !important;
 }
 
-.hero-image {
-    height: 85%;
-    width: 100%;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-
+.section {
+    margin-top: 160px;
+    /*max-width: 940px;*/
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-.hero-image-left {
-    justify-content: flex-start;
-}
-
-.hero-image-start {
-    background-image: url("/assets/hero-front.jpg");
-}
-
-.hero-image-ortho {
-    background-image: url("/assets/leisten.jpg");
-}
-
-.hero-text {
-    margin-left: 40px;
-    margin-bottom: 80px;
-    /*text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);*/
-    
-}
-
-.hero-text > * {
-    font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-    color: white !important;
-    margin-bottom: 40px;
-}
-
-.hero-text h1 {
-    font-size: 48px;
-    margin-left: 0;
-    margin-bottom: 10px;
-}
-
-.hero-text p {
-    font-size: 36px;
-    margin-left: 0;
-}
-
-.introduction p {
+.text--large p {
     text-align: center;
     margin-bottom: 10px;
 }
 
-.offer img {
-    max-width: 940px;
-    margin-top: 40px;
-}
+/* ==========================================================================
+   Homepage
+   ========================================================================== */
 
-table {
+.overview {
     margin-top: 40px;
     border-spacing: 40px;
 }
 
-td {
+.overview__service {
     width: 250px;
     background-image: url('/assets/check.svg');
     background-size: 18px;
@@ -172,7 +106,12 @@ td {
     font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
 }
 
-.brands-icons {
+.offer {
+    max-width: 940px;
+    margin-top: 40px;
+}
+
+.brands {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -181,20 +120,24 @@ td {
     height: 100%;
 }
 
-.brands {
+.brand-banner {
     width: 100%;
     height: 100px;
     background-color: #ffffff;
 }
 
-.brands-icons img {
+.brands__icon {
     height: 45px;
     margin-top: 0;
 }
 
-#varomed {
+.brands__icon--small {
     height: 50px;
 }
+
+/* ==========================================================================
+   Orthopädie-Schuhtechnik
+   ========================================================================== */
 
 .services {
     max-width: 940px;
