--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,5 +1,4 @@
 body {
-
     background-color: #FBFBFB;
 }
 
@@ -8,7 +7,6 @@ main {
     flex-direction: column;
     align-items: center;
 }
-
 
 h2 {
     font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
@@ -31,45 +29,74 @@ h4 {
 
 p,
 a {
-    font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    /*font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;*/
+    font-family: "HelveticaNeueLight", "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     font-stretch: normal;
+    font-weight: 300;
     font-size: 18px;
+    line-height: 24px;
     text-decoration: none;
     color: #333333;
     margin-bottom: 0;
     margin-top: 0;
 }
 
-p>a {
+strong {
+    font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+p a {
     font-size: 28px;
     color: #f26661;
 }
 
-p>a:hover {
+p a:hover {
     color: #FF8D8A;
 }
 
-button {
+.text p {
+    max-width: 940px;
+    margin-top: 20px;
+}
+
+.text--center p {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.btn {
     height: 60px;
-    background-color: #46877E;
     color: #ffffff;
     font-size: 24px;
     border: none;
     border-radius: 4px;
-    padding-left: 40px;
-    padding-right: 40px;
-    /*margin-top: 40px;*/
-}
-
-button:hover {
-    background-color: #6CA099;
-    color: #ffffff;
+    padding: 0 40px 0 40px;
     cursor: pointer;
 }
 
-.ghost-button {
+.btn--standard {
+    background-color: #46877E;
+}
+
+.btn--standard:hover {
+    background-color: #6CA099;
+}
+
+.btn--ghost {
     border: solid 1px #fff;
-    background: 0 0 !important;
+    background: 0 0;
+}
+
+.btn--read-more {
+    background-color: #D79A70;
+    height: 40px;
+    width: 160px;
+    font-size: 18px;
+    white-space: nowrap;
+    padding: 0;
+    margin-bottom: 20px;
 }
 
 .section {
@@ -80,10 +107,8 @@ button:hover {
     align-items: center;
 }
 
-.text--large p {
-    text-align: center;
-    margin-bottom: 10px;
-}
+
+
 
 /* ==========================================================================
    Homepage
@@ -91,11 +116,12 @@ button:hover {
 
 .overview {
     margin-top: 40px;
+    border-collapse: separate;
     border-spacing: 40px;
 }
 
 .overview__service {
-    width: 250px;
+    width: 300px;
     background-image: url('/assets/check.svg');
     background-size: 18px;
     background-position: left;
@@ -135,17 +161,10 @@ button:hover {
     height: 50px;
 }
 
+
 /* ==========================================================================
    Orthopädie-Schuhtechnik
    ========================================================================== */
-
-.services {
-    max-width: 940px;
-}
-
-.services p {
-    margin-top: 40px;
-}
 
 .service-cards {
     display: flex;
@@ -153,28 +172,43 @@ button:hover {
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
-    max-width: 940px;
+    max-width: 990px;
+    margin-bottom: 160px;
 }
 
 .card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 350px;
-    height: 300px;
+    width: 300px;
+    height: 350px;
     margin: 10px;
+    background-color: #fff;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
 }
 
-.card h4 {
-    text-align: center;
-}
-
-/* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
+.card__text h4 {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.card__list {
+    list-style-type: disc;
+    margin-top: 20px;
+    margin-left: 60px;
+}
+
+.card__list li {
+    font-size: 18px;
+    font-family: "HelveticaNeueLight", "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-weight: 300;
+    margin-top: 5px;
 }
