--- a/_includes/css/responsive.css
+++ b/_includes/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1112px) {
+/*@media only screen and (max-width: 1112px) {
     .intro {
         font-size: 24px;
     }
@@ -115,4 +115,4 @@
     .footer-item:first-child {
         margin-bottom: 20px;
     }
-}
+}*/
