--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -7,13 +7,13 @@
 <meta name="description" {% if page.description %} content="{{ page.description }}" {% else %} content="{{page.excerpt | strip_html}}" {% endif %}>
 <meta name="author" content="Johannes Borchard" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62837996-4"></script>
-<script>
+<!-- <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-62837996-4');
-</script>
+</script> -->
 
 
 <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script> -->
