--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,11 +1,20 @@
 body {
     background-color: #FBFBFB;
+    font-family: "HelveticaNeueLight", "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-stretch: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    text-decoration: none;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    
+    
 }
 
 h2 {
@@ -31,11 +40,6 @@ h4 {
 p,
 a {
     /*font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;*/
-    font-family: "HelveticaNeueLight", "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-    font-stretch: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 24px;
     text-decoration: none;
     color: #333;
     margin-bottom: 0;
@@ -178,7 +182,7 @@ p a:hover {
 
 
 /* ==========================================================================
-   Orthopädie-Schuhtechnik
+   Orthopädie-Schuhtechnik/Sanitätshaus
    ========================================================================== */
 
 .service-cards {
@@ -267,4 +271,46 @@ p a:hover {
     font-weight: 300;
     margin-top: 5px;
     color: #444;
+}
+
+/* ==========================================================================
+   Regionale Versorgung
+   ========================================================================== */
+
+.institution-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.institution-table {
+    margin-top: 40px;
+    width: 940px;
+}
+
+.institution {
+    border-bottom: 1px solid #CCC;
+    border-top: 1px solid #CCC;
+
+}
+
+/*.institution:last-child {
+  border-bottom: none;
+}*/
+
+.institution__data {
+
+    line-height: 24px;
+    color: #444;
+    padding: 40px 80px 40px 0;
+}
+
+.institution__data:last-child {
+    padding-right: 0;
+}
+
+.institution__type {
+    font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    color: #333;
+    margin-bottom: 5px;
 }
