--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -1,12 +1,22 @@
+
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    
+    /*position: relative;*/
+}
+
+.header--hero {
     height: 100vh;
     margin-top: 120px;
     z-index: 0;
-    /*position: relative;*/
+}
+
+.header--simple h1 {
+    margin-top: 280px;
+    margin-bottom: 80px;
 }
 
 /* ==========================================================================
@@ -121,16 +131,16 @@
 }
 
 .header__text h1, .header__text p {
-    font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     color: #fff;
     margin-bottom: 40px;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
 }
 
+.header__text p {
+    font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+}
+
 .header__text h1 {
-    font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-    font-size: 48px;
-    line-height: 48px;
     margin-left: 0;
     margin-bottom: 10px;
 }
@@ -140,3 +150,8 @@
     line-height: 40px;
     margin-left: 0;
 }
+
+/* ==========================================================================
+   Simple Header
+   ========================================================================== */
+
