--- a/_includes/html/footer.html
+++ b/_includes/html/footer.html
@@ -16,32 +16,32 @@
             </div>
         </div>
         <div class="contact">
-            <p>
+            <div>
                 <strong>Telefon</strong>
-                <br> 02621 2490
-            </p>
-            <p>
+                <br> <a name="phone-number"></a>02621 2490
+            </div>
+            <div>
                 <br><strong>Telefax</strong>
                 <br>02621 4912
-            </p>
-            <p>
+            </div>
+            <div>
                 <br><strong>E-Mail</strong>
-                <br>borchard-orthopaedie@t-online.de
-            </p>
+                <br><a href="mailto:borchard-orthopaedie@t-online.de?subject=Kontaktanfrage">borchard-orthopaedie@t-online.de</a>
+            </div>
         </div>
         <div class="open">
-            <p>
+            <div>
                 <strong>Montag und Donnerstag</strong>
                 <br>8:30-18:30
-            </p>
-            <p>
+            </div>
+            <div>
                 <br><strong>Dienstag, Mittwoch und Freitag</strong>
                 <br>8:30-18:00
-            </p>
-            <p>
+            </div>
+            <div>
                 <br><strong>Samstag</strong>
                 <br>geschlossen
-            </p>
+            </div>
         </div>
     </div>
     <div class="footer-item-group">
