--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -6,6 +6,7 @@
 <!-- <meta name="google-site-verification" content=""> -->
 <meta name="description" {% if page.description %} content="{{ page.description }}" {% else %} content="{{page.excerpt | strip_html}}" {% endif %}>
 <meta name="author" content="Johannes Borchard" />
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62837996-4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
