--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -80,6 +80,14 @@
     color: #6CA099;
 }
 
+.menu-toggle {
+    width: 20px;
+    margin-right: 20px;
+    padding:; 10px;
+    cursor: pointer;
+    display: none;
+}
+
 /* ==========================================================================
    Hero Image
    ========================================================================== */
@@ -159,3 +167,76 @@
    Simple Header
    ========================================================================== */
 
+
+
+@media only screen and (max-width: 1280px), (min-device-width: 768px) and (max-device-width: 1024px){
+
+    .nav__menu {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+        margin-top: 40px;
+    }
+
+    .nav__menu-item {
+        margin-bottom: 10px;
+    }
+
+    .header__nav-bar {
+        display: block;
+        height: 120px;
+    }
+
+    .nav__logo {
+        margin-top: 30px;
+        max-width: 400px; /* workaround, to be fixed */
+    }
+
+    .menu-toggle {
+        position: absolute;
+        top: 45px;
+        right: 20px;
+        display: block;
+    }
+
+    .nav__menu {
+        display: none;
+    }
+
+    .active {
+        display: flex;
+    }
+
+    .menu-open {
+        height: 320px;
+    }
+}
+
+@media only screen and (max-width: 1024px), (min-device-width: 768px) and (max-device-width: 1024px){
+    .nav__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 30px;
+    margin-top: 20px;
+    max-width: 160px; /* workaround, to be fixed */
+    }   
+
+    .nav__logo-img {
+        width: 140px;
+        margin-left: 15px;
+    }
+
+    .nav__logo-name {
+        white-space: nowrap;
+        font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+        font-weight: 600;
+        font-size: 18px;
+        font-stretch: normal;
+    }
+
+    .menu-toggle {
+        top: 45px;
+    }
+
+}
