--- a/_includes/html/footer.html
+++ b/_includes/html/footer.html
@@ -1,21 +1,20 @@
 <footer>
     <div class="footer-elements">
-        <div class="address">
-            <img class="map" src="/assets/Map.png" alt="Karte">
-            <div>
-                <p>
-                    <strong>Adresse</strong>
-                    <br> Walter Borchard
-                    <br> Orthopädie-Schuhtechnik
-                    <br> Sanitätshaus
-                </p>
-                <p>
-                    <br> Hochstraße 8
-                    <br> 56112 Lahnstein
-                </p>
-            </div>
+        <div class="address footer-section">
+            <!-- <img class="map" src="/assets/Map.png" alt="Karte"> -->
+            <p>
+                <strong>Adresse</strong>
+                <br> Walter Borchard
+                <br> Orthopädie-Schuhtechnik
+                <br> Sanitätshaus
+            </p>
+            <p>
+                <br> Hochstraße 8
+                <br> 56112 Lahnstein
+            </p>
+
         </div>
-        <div class="contact">
+        <div class="contact footer-section">
             <div>
                 <strong>Telefon</strong>
                 <br> <a name="phone-number"></a>02621 2490
@@ -29,7 +28,7 @@
                 <br><a href="mailto:borchard-orthopaedie@t-online.de?subject=Kontaktanfrage">borchard-orthopaedie@t-online.de</a>
             </div>
         </div>
-        <div class="open">
+        <div class="open footer-section">
             <div>
                 <strong>Montag und Donnerstag</strong>
                 <br>8:30-18:30
