--- a/_includes/css/footer.css
+++ b/_includes/css/footer.css
@@ -11,10 +11,10 @@ footer * {
     color: #fff;
 }
 
-.address {
+/*.address {
     display: flex;
     align-items: center;
-}
+}*/
 
 .map {
     margin-right: 20px;
@@ -42,4 +42,26 @@ footer * {
     font-size: 14px;
     margin-bottom: 20px;
     margin-top: 40px;
+}
+
+@media only screen and (max-width: 1024px), (min-device-width: 768px) and (max-device-width: 1024px){
+    footer {
+        height: auto;
+    }
+
+    .footer-elements {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 60px;
+    }
+
+    .footer-section {
+        margin-bottom: 60px;
+        width: 300px;     
+    }
+
+    /*.address {
+        flex-direction: column;
+        align-items: flex-start;
+    }*/
 }
