--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -225,7 +225,7 @@
     .nav__logo {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin-left: 30px;
     margin-top: 20px;
     max-width: 160px; /* workaround, to be fixed */
