--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -12,6 +12,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 80px;
 }
 
 .section {
@@ -440,8 +441,12 @@ p a:hover {
 
 @media only screen and (max-width: 1024px), (min-device-width: 768px) and (max-device-width: 1024px){
 
+    main {
+        margin-top: 40px;
+    }
+
     .text {
-        margin: 0 60px 0 60px;
+        margin: 0 40px 0 40px;
     }
 
     .institution-table, .institution, .institution__data, thead, tbody, th{
