--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -115,7 +115,7 @@ p a:hover {
 
 .text--center p {
     text-align: center;
-    margin-bottom: 10px;
+    margin: 0 40px 10px 40px;
 }
 
 .text__element-row {
@@ -134,9 +134,8 @@ p a:hover {
 
 .text__image {
     display: block;
-    max-height: 300px;
-    width: auto;
-    height: auto;
+    max-height: 200px;
+    max-width: 400px;
     margin-top: 40px;
 }
 
@@ -445,8 +444,28 @@ p a:hover {
         margin-top: 40px;
     }
 
+    h1, h2, h3, h4 {
+        text-align: center;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    h1 {
+    font-size: 36px;
+    line-height: 42px;
+
+    }
+
     .text {
         margin: 0 40px 0 40px;
+    }
+
+    .text__element-row {
+        flex-direction: column;
+    }
+    
+    .text--center p br {
+        display: none;
     }
 
     .institution-table, .institution, .institution__data, thead, tbody, th{
