--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -49,6 +49,7 @@ h2 {
     font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     font-weight: 600;
     font-size: 36px;
+    line-height: 42px;
     margin: 0;
 }
 
@@ -204,6 +205,7 @@ p a:hover {
     height: 60px;
     color: #ffffff;
     font-size: 24px;
+    font-weight: 600;
     border: none;
     border-radius: 4px;
     padding: 0 30px 0 30px;
@@ -569,19 +571,28 @@ p a:hover {
    .overview__service{
 
         line-height: 24px;
+        font-size: 18px;
         color: #444;
         border: none;
         /*border-bottom: 1px solid #eee;*/
         text-align: left;
-        padding: 20px 20px 20px 30px;
+        padding: 15px 20px 15px 30px;
 
+   }
+
+   .overview__service tr {
+        margin-bottom: 0;
    }
    .overview__service:before{
 
     position: absolute;
     white-space: nowrap;
    }
-   .overview tr{
+
+   .overview {
+    margin-left: 40px;
+   }
+   .overview > tr{
 
     margin: 0 0 1rem 0;
       display: flex;
@@ -592,4 +603,37 @@ p a:hover {
 
    }
      
+     .offer {
+    max-width: 90%;
+    max-height: 200px;
+    width: auto;
+    }
+
+    .brands {
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .brand-banner {
+        width: 100%;
+        height: auto;
+    }
+
+    .brands__icon {
+        height: 45px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .brands__icon--small {
+        height: 50px;
+    }
+
+    .btn {
+        height: 60px;
+        font-size: 18px;
+        min-width: 200px;
+        padding: 0 20px 0 20px;
+    }
 }
