--- a/_includes/html/footer.html
+++ b/_includes/html/footer.html
@@ -25,7 +25,7 @@
             </div>
             <div>
                 <br><strong>E-Mail</strong>
-                <br><a href="mailto:borchard-orthopaedie@t-online.de?subject=Kontaktanfrage">borchard-orthopaedie@t-online.de</a>
+                <br><a href="mailto:&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;?subject=Kontaktanfrage">&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;</a>
             </div>
         </div>
         <div class="open footer-section">
