--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <meta name="google-site-verification" content=""> -->
 <meta name="description" {% if page.description %} content="{{ page.description }}" {% else %} content="{{page.excerpt | strip_html}}" {% endif %}>
-<meta name="author" content="Johannes Borchard" />
+<meta name="keywords" content="lahnstein, koblenz, westerwald, rhein-lahn, orthopädie-schuhtechnik, sanitätshaus, schuhe, einlagen, bandagen, orthesen, walter borchard">
+<meta name="author" content="Walter Borchard" />
+<link rel="shortcut icon" type="image/png" href="{{ " /assets/favicon.png " | prepend: site.baseurl }}">
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62837996-4"></script>
 <script>
