--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -135,18 +135,21 @@ p a:hover {
 
 .text__image {
     display: block;
-    max-height: 200px;
-    max-width: 400px;
+    max-height: 100px;
+    /*max-width: 400px;*/
     margin-top: 40px;
+    width: auto;
+    height: auto;
+    align-self: center;
 }
 
 .text__image--float {
     margin-top: 20px;
 }
 
-.text__image--small {
+/*.text__image--small {
     max-height: 100px;
-}
+}*/
 
 #bauerfeind-plakat {
     max-height: 600px;
@@ -451,9 +454,134 @@ p a:hover {
 #timeline-desktop {
     display: block;
 }
+
+
+/* ==========================================================================
+   Slider
+   ========================================================================== */
+
+
+.slick-slide {
+    margin: 0px 20px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider
+{
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+            user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+
+
 /* ==========================================================================
    Mobile version
    ========================================================================== */
+
 
 @media only screen and (max-width: 1024px), (min-device-width: 300px) and (max-device-width: 1024px){
 
@@ -479,6 +607,7 @@ p a:hover {
 
     .text {
         margin: 0 40px 0 40px;
+        max-width: 300px;
     }
 
     .text__element-row {
@@ -658,6 +787,8 @@ p a:hover {
         padding: 0 20px 0 20px;
     }
 
+    
+
     #timeline-mobil {
     display: block;
     width: 300px;
@@ -669,5 +800,19 @@ p a:hover {
 
     .text__image {
         max-width: 300px;
+    }
+}
+
+
+@media only screen and (max-width: 375px), (min-device-width: 300px) and (max-device-width: 1024px){
+   .btn--back {
+        max-width: 200px;
+        white-space: normal;
+    }
+
+    .overview, .overview__service, .overview tr{
+        width: 80%;
+        margin-right: 20px;
+
     }
 }
