--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -10,8 +10,12 @@
 <meta name="author" content="Walter Borchard" />
 <link rel="shortcut icon" type="image/png" href="{{ " /assets/favicon.png " | prepend: site.baseurl }}">
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-<!-- <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script> -->
+
+<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
+
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62837996-4"></script>
