--- a/_includes/html/footer.html
+++ b/_includes/html/footer.html
@@ -24,8 +24,8 @@
                 <br>02621 4912
             </div>
             <div>
-                <br><strong>E-Mail</strong>
-                <br><a href="mailto:&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;?subject=Kontaktanfrage">&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;</a>
+                <br><strong>&#069;&#045;&#077;&#097;&#105;&#108;</strong>
+                <br><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;?&#115;&#117;&#098;&#106;&#101;&#099;&#116;=&#075;&#111;&#110;&#116;&#097;&#107;&#116;&#097;&#110;&#102;&#114;&#097;&#103;&#101;">&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;</a>
             </div>
         </div>
         <div class="open footer-section">
