--- a/_includes/html/head.html
+++ b/_includes/html/head.html
@@ -18,7 +18,7 @@
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-62837996-4"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62837996-4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -35,7 +35,7 @@
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+</script> -->
 
 
 
