--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    
+
     /*position: relative;*/
 }
 
@@ -131,7 +131,7 @@
 }
 
 .header__image--firma {
-    background-image: url("/assets/ladenfront.jpg");
+    background-image: url("/assets/fassade.jpg");
 }
 
 .header__image--regio {
@@ -143,7 +143,7 @@
 }
 
 .header__text {
-    margin-bottom: 80px; 
+    margin-bottom: 80px;
     margin-left: 40px;
     margin-right: 40px;
     text-align: center;
@@ -232,7 +232,7 @@
     margin-left: 30px;
     margin-top: 20px;
     max-width: 160px; /* workaround, to be fixed */
-    }   
+    }
 
     .nav__logo-img {
         width: 140px;
