Bild für Ortho Schuhe und Vorbereitung auf Consent

--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -134,6 +134,10 @@
   background-image: url("/assets/bandage.jpg");
 }
 
+.header__image--ortho-schuhe {
+  background-image: url("/assets/ortho-schuhe.jpg");
+}
+
 .header__image--firma {
     background-image: url("/assets/fassade.jpg");
 }
