--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,29 @@
         navBar[0].classList.toggle('menu-open');
         });
     </script>
-	
+		<!-- <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+	<script>
+	window.cookieconsent.initialise({
+	  "palette": {
+	    "popup": {
+	      "background": "#efefef",
+	      "text": "#404040"
+	    },
+	    "button": {
+	      "background": "#46877e"
+	    }
+	  },
+	  "type": "opt-in",
+	  "content": {
+	    "message": "Diese Website verwendet Thirt-Party-Cookies, um die Nutzererfahrung zu verbessern.",
+	    "dismiss": "Ablehnen",
+			"deny": "Ablehnen",
+	    "allow": "Zustimmen",
+	    "link": "Mehr erfahren",
+	    "href": "/impressum"
+	  }
+	});
+	</script> -->
 </body>
 
 </html>
